[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "plantid100"
version = "0.1.0"
description = "Lightweight hybrid plant identification engine for modern mobile devices"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "nicholasbc100" }
]
keywords = ["plant", "plant-identification", "mobile-ml", "coreml", "tflite", "botany"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Intended Audience :: Developers",
]

[project.urls]
Homepage = "https://github.com/nicholasbc100/PlantID100"
Repository = "https://github.com/nicholasbc100/PlantID100"
Issues = "https://github.com/nicholasbc100/PlantID100/issues"
